version 1_7_0 import